# Minimal

./: README.md  gcenter.cpp  main.cpp  meson.build  test.cpp  util.hpp  wget-log
extra/: ASDEX-U.ipynb  Grad-Safranov.nb  Slowing-down.ipynb  transport.nb
includes/: collisions.hpp  collisons.hpp  meson.build  odeint.hpp  types.hpp  util.hpp
tests/: cil2car.cpp  collisions.cpp  dispersion.cpp  gcenter.cpp  main.cpp  meson.build  orbit.cpp  process_dispersion.cpp  random.cpp  sd.cpp  slowing.cpp  test.cpp  vectors.cpp  velocity_distribution.cpp
