project('com.github.studentenherz.minimal', 'cpp', default_options: ['cpp_std=c++11'])


inc_dir = include_directories('includes')

subdir('includes')

executable('main', 'main.cpp', dependencies: lib_dep)
executable('test.exe', 'test.cpp', dependencies: lib_dep)
executable('vectors.exe', 'vectors.cpp', dependencies: lib_dep)
executable('gcenter.exe', 'gcenter.cpp', dependencies: lib_dep)