executable('main', 'main.cpp', dependencies: lib_dep)
executable('test.exe', 'test.cpp', dependencies: lib_dep)
executable('vectors.exe', 'vectors.cpp', dependencies: lib_dep)
executable('gcenter.exe', 'gcenter.cpp', dependencies: lib_dep)
executable('random', 'random.cpp', dependencies: lib_dep)
executable('cil2car', 'cil2car.cpp', dependencies: lib_dep)
executable('dispersion', 'dispersion.cpp', dependencies: lib_dep)
