executable('orbit', 'orbit.cpp', dependencies: lib_dep)
executable('vectors.exe', 'vectors.cpp', dependencies: lib_dep)
executable('gcenter.exe', 'gcenter.cpp', dependencies: lib_dep)
executable('cil2car', 'cil2car.cpp', dependencies: lib_dep)
executable('dispersion', 'dispersion.cpp', dependencies: lib_dep)
executable('process_dispersion', 'process_dispersion.cpp', dependencies: lib_dep)
executable('velocity_distribution', 'velocity_distribution.cpp', dependencies: lib_dep)
executable('slowing', 'slowing.cpp', dependencies: lib_dep)
